--- a/app/views/hello.scala.html
+++ b/app/views/hello.scala.html
@@ -1,4 +1,7 @@
-@(implicit request: Request[_])
+@import models._
+@import views.html.helper._
+
+@(addressForm: Form[Address])(implicit request: Request[_])
 @import play.api.i18n.Messages
 <html>
 <header>
@@ -6,5 +9,62 @@
 </header>
 <body>
 <h1 id="header-1">Hello World page</h1>
+<h3>
+    Enter address details
+</h3>
+@form(action = routes.HelloController.submit) {
+<fieldset>
+    @inputText(addressForm("line1"),
+                '_id -> "line1",
+                'placeholder -> Messages("address.line-1"),
+                'size -> 30,
+                '_label -> Messages("address.line-1"),
+                '_showErrors -> true,
+                '_showConstraints -> false)
+
+    @inputText(addressForm("line2"),
+                '_id -> "line2",
+                'placeholder -> Messages("address.line-2"),
+                'size -> 30,
+                '_label -> Messages("address.line-2"),
+                '_showErrors -> true,
+                '_showConstraints -> false)
+
+    @inputText(addressForm("line3"),
+                '_id -> "line3",
+                'placeholder -> Messages("address.line-3"),
+                'size -> 30,
+                '_label -> Messages("address.line-3"),
+                '_showErrors -> true,
+                '_showConstraints -> false)
+
+    @inputText(addressForm("line4"),
+                '_id -> "line4",
+                'placeholder -> Messages("address.line-4"),
+                'size -> 30,
+                '_label -> Messages("address.line-4"),
+                '_showErrors -> true,
+                '_showConstraints -> false)
+
+    @inputText(addressForm("postcode"),
+                '_id -> "postcode",
+                'placeholder -> Messages("address.postcode"),
+                'size -> 30,
+                '_label -> Messages("address.postcode"),
+                '_showErrors -> true,
+                '_showConstraints -> false)
+
+    @inputText(addressForm("country"),
+                '_id -> "country",
+                'placeholder -> Messages("address.country"),
+                'size -> 30,
+                '_label -> Messages("address.country"),
+                '_showErrors -> true,
+                '_showConstraints -> false)
+
+    <button id="submit" type="submit" value='submit' >@Messages("submit")</button>
+
+</fieldset>
+}
 </body>
 </html>
