added controller and test for contact-details page

--- a/app/views/hello.scala.html
+++ b/app/views/hello.scala.html
@@ -12,7 +12,7 @@
 <h3>
     Enter address details
 </h3>
-@form(action = routes.HelloController.submit) {
+@form(action = routes.AddressController.submit) {
 <fieldset>
     @inputText(addressForm("line1"),
                 '_id -> "line1",
